Поправил по мелочи оставшиеся сервисы: сервисы по работе с пользователями и сервисы по работе с неактивностями пользователей.